--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: #0e101c;
+  background: rgb(174, 174, 174);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -17,6 +17,7 @@ body {
 h1 {
   font-weight: 100;
   color: white;
+  font-weight: bold;
   text-align: center;
   font-size: 2rem;
 }
@@ -27,7 +28,7 @@ h1 {
   right: -8px;
   border-radius: 50%;
   background-color: #ec5990;
-  color: #fff;
+  color: #000;
   display: inline-block;
   padding-left: 6px;
   padding-right: 6px;
@@ -52,11 +53,12 @@ h1 {
 
 .plant-image {
   height: 296px;
+  border-radius: 4px;
 }
 
 .plant-details {
   padding: 0 32px 0 16px;
-  color: #fff;
+  color: #ec5990;
   font-weight: 200;
   display: flex;
   flex-flow: column nowrap;
@@ -67,6 +69,8 @@ h1 {
 .plant-name {
   margin-top: 0;
   margin-bottom: 6px;
+  font-weight: bold;
+  color: greenyellow;
 }
 
 .plant-scientific-name {
@@ -111,7 +115,7 @@ p {
 }
 
 .checkout-section {
-  color: #fff;
+  color: #000;
   padding: 32px 0;
   display: flex;
   flex-flow: column nowrap;
@@ -127,7 +131,6 @@ p {
 }
 
 form {
-  background: #0e101c;
   max-width: 400px;
   margin: 0 auto;
 }
@@ -250,4 +253,44 @@ pre {
 .active {
   color: #0e101c;
   border-bottom: 2px solid !important;
+}
+
+
+.dark-mode__toggle {
+  background: papayawhip;
+  border-radius: 50px;
+  border: 1px solid white;
+  height: 20px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 40px;
+}
+
+.toggle {
+  background: greenyellow;
+  border-radius: 50px;
+  height: 18px;
+  right: 10;
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  transition: 0.2s;
+  width: 20px;
+  margin: 0 auto;
+}
+
+.toggled {
+  right:572px;
+}
+
+.dark-mode {
+  color: #fff;
+  background-color: #252930;
+}
+
+.navbar {
+  background-color: #252930;
+  border: none;
 }
